<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.natasa_tsibi.it21240.MainActivity">

    <EditText
        android:id="@+id/eT_ID"
        android:ems="10"
        android:hint="Enter your ID here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eT_userID"
        android:layout_alignLeft="@+id/eT_userID"
        android:layout_alignStart="@+id/eT_userID"
        android:layout_marginBottom="21dp"
        android:maxLength="10"
        android:textColor="#1e605b"
        android:textColorHint="#a3a1a1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/eT_userID"
        android:ems="10"
        android:hint="@string/enter_your_userid_here"
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eT_longitude"
        android:layout_alignLeft="@+id/eT_longitude"
        android:layout_alignStart="@+id/eT_longitude"
        android:layout_marginBottom="27dp"
        android:maxLength="10"
        android:textColor="#1e605b"
        android:textColorHint="#a3a1a1"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/eT_longitude"
        android:ems="10"
        android:hint="@string/enter_longitude_here"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eT_latitude"
        android:layout_alignLeft="@+id/eT_latitude"
        android:layout_alignStart="@+id/eT_latitude"
        android:layout_marginBottom="32dp"
        android:textColor="#1e605b"
        android:textColorHint="#a3a1a1"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/eT_latitude"
        android:ems="10"
        android:hint="@string/enter_latitude_here"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_add"
        android:layout_alignLeft="@+id/eT_timestamp"
        android:layout_alignStart="@+id/eT_timestamp"
        android:layout_marginBottom="165dp"
        android:textColor="#1e605b"
        android:textColorHint="#a3a1a1"
        android:textStyle="italic" />

    <EditText
        android:ems="10"
        android:hint="@string/enter_timestamp_here"
        android:id="@+id/eT_timestamp"
        android:inputType="datetime|textAutoComplete|textAutoCorrect|textShortMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_latitude"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="39dp"
        android:layout_toEndOf="@+id/textView_timestamp"
        android:layout_toRightOf="@+id/textView_timestamp"
        android:maxLength="20"
        android:textColor="#1e605b"
        android:textColorHint="#a3a1a1"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_next"
        android:layout_alignBottom="@+id/button_next"
        android:layout_alignLeft="@+id/textView_timestamp"
        android:layout_alignStart="@+id/textView_timestamp"
        android:layout_marginLeft="51dp"
        android:layout_marginStart="51dp"
        android:background="@color/colorAccent"
        android:text="@string/insert_data"
        android:textColor="#FF98AC01"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:layout_toEndOf="@+id/button_add"
        android:layout_toRightOf="@+id/button_add"
        android:background="#FF98AC01"
        android:text="@string/next_view"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="UPDATE" />


    <TextView
        android:id="@+id/textView_userID"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eT_userID"
        android:layout_alignBottom="@+id/eT_userID"
        android:layout_alignLeft="@+id/textView_longitude"
        android:layout_alignStart="@+id/textView_longitude"
        android:text="@string/userid"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_longitude"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eT_longitude"
        android:layout_alignBottom="@+id/eT_longitude"
        android:layout_alignLeft="@+id/textView_latitude"
        android:layout_alignStart="@+id/textView_latitude"
        android:text="@string/longitude"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_latitude"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eT_latitude"
        android:layout_alignBottom="@+id/eT_latitude"
        android:layout_alignLeft="@+id/textView_timestamp"
        android:layout_alignStart="@+id/textView_timestamp"
        android:text="@string/latitude"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eT_timestamp"
        android:layout_alignBottom="@+id/eT_timestamp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/timestamp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eT_userID"
        android:layout_alignLeft="@+id/textView_userID"
        android:layout_alignStart="@+id/textView_userID"
        android:layout_marginBottom="37dp"
        android:text="ID:"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textStyle="bold" />


</RelativeLayout>
